--- a/src/pages/settings/credits.astro
+++ b/src/pages/settings/credits.astro
@@ -4,12 +4,17 @@ import SettingsLayout from "@layouts/SettingsLayout.astro";
 <SettingsLayout active="credits" title="Credits">
     <div class="w-full flex-grow">
         <div>
-            <p> Thanks to all the wonderful people who have contributed! </p>
+            <p> Thanks to all the people who have contributed! </p>
             <ul class="list-disc pl-5 mt-2 font-bold">
                 <li> 
-                    <a class="underline hover:text-(--accent) transition-colors duration-300" href="https://github.com/hyperficial" target="_blank" rel="noopener noreferrer">
-                        Owski 
+                    <a class="underline hover:text-(--accent) transition-colors duration-300" href="https://github.com/sriail" target="_blank" rel="noopener noreferrer">
+                        Sriail 
                     </a>
+                </li>
+                <li> 
+                    <a href="https://github.com/hyperficial" target="_blank" rel="noopener noreferrer" class="underline hover:text-(--accent) transition-colors duration-300"> 
+                        Owski
+                    <a>
                 </li>
                 <li> 
                     <a href="https://github.com/proudparrot2" target="_blank" rel="noopener noreferrer" class="underline hover:text-(--accent) transition-colors duration-300"> 
